--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,400&display=swap');
 
+
 body {
     display: flex;
     flex-direction: column;
@@ -21,12 +22,16 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 70%;
+    position: fixed;
+    background-color: #1F2937;
+    width: 100%;
 }
 
 ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
+    margin-right: 15%;
 }
 
 a {
@@ -38,6 +43,7 @@ a {
 .logo {
     display: flex;
     align-items: center;
+    margin-left: 15%;
 }
 
 .logo p {
@@ -53,6 +59,7 @@ a {
     color: white;
     margin: 50px;
     max-width: 70%;
+    padding-top: 50px;
 }
 
 h1 {
@@ -183,12 +190,11 @@ h2 {
 
 .footer {
     background-color: #1F2937;
-    margin: 0;
     padding: 16px;
-    width: 100%;
     text-align: center;
     color: #E5E7EB;
     font-size: 12px;
+    width: 97.8%;
 }
 
 
